--- a/res/css/style.css
+++ b/res/css/style.css
@@ -4,113 +4,134 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #FFFDF0;
+    background-color: #000;
+    color: #FEFAD8;
     height: 100vh;
     overflow-y: auto;
 }
-header{
+.full {
+    position: relative;
+    height: 100vh;
     width: 100%;
-    height: 82px;
-    position: sticky;
-    top: 0;
-    background-color: #FFFDF0;
-    box-shadow: 1px 1px 5px 0px #F7E012;
-    border-bottom: #F7E012 solid 3px;
-}
-.logo {
-    padding: .5rem;
-    display: inline-block;
-    margin-left: 10px;
-    object-fit: contain;
-
-}
-main {
-    overflow-y: auto;
-    padding: .5rem;
 }
 
-a {
-    text-decoration: none;
+.title {
+    margin: 0;
+    position: absolute;
+    top: calc(50% - 0.5em);
+    width: 100%;
+    text-align: center;
+    line-height: 1;
+    font-family: "Montserrat", sans-serif;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 100;
+    font-size: 30px;
 }
+/* title animation */
+.title1 {
+    padding: 10px;
+    display: block;
+    animation-name:fadeUpAnime;
+    animation-duration:1s;
+    animation-fill-mode:forwards;
+    opacity:0;
+    }
 
-ul {
-    list-style: none;
-}
+    .title2 {
+        padding: 10px;
+        animation-delay: 1s;
+        display: block;
+        animation-name:fadeUpAnime;
+        animation-duration:1s;
+        animation-fill-mode:forwards;
+        opacity:0;
+        }
+
+        .title3 {
+            padding: 10px;
+            animation-delay: 2s;
+            display: block;
+            animation-name:fadeUpAnime;
+            animation-duration:1s;
+            animation-fill-mode:forwards;
+            opacity:0;
+            }
+
+    @keyframes fadeUpAnime{
+      from {
+        opacity: 0;
+        transform: translateY(100px);
+      }
+    
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
 /*
-    navigation menu
-*/
-.nav{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background-color: #FFFDF0;
+ *
+ * slide show
+ *
+ */
+
+ .slider {
     overflow: hidden;
-
-}
-.menu a{
-    display: block;
-    padding: 30px;
-    color: #3B3502;
-}
-.menu a:hover{
-    background-color: #6D6204;
-}
-
-.nav{
-    max-height: 0;
-    transition: max-height .5s ease-out;
-}
-
-/* Menu Icon */
-.hamb{
-    cursor: pointer;
-    float: right;
-    padding: 40px 20px;
-}/* Style label tag */
-
-.hamb-line {
-    background: #9E8F05;
-    display: block;
-    height: 2px;
-    position: relative;
-    width: 24px;
-
-} /* Style span tag */
-
-.hamb-line::before,
-.hamb-line::after{
-    background: #9E8F05;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
     width: 100%;
-}
-.hamb-line::before{
-    top: 5px;
-}
-.hamb-line::after{
-    top: -5px;
-}
-
-.side-menu {
-    display: none;
-} /* Hide checkbox */
-
-/* Toggle menu icon */
-.side-menu:checked ~ nav{
-    max-height: 100%;
-}
-.side-menu:checked ~ .hamb .hamb-line {
-    background: transparent;
-}
-.side-menu:checked ~ .hamb .hamb-line::before {
-    transform: rotate(-45deg);
-    top:0;
-}
-.side-menu:checked ~ .hamb .hamb-line::after {
-    transform: rotate(45deg);
-    top:0;
-}
+    height: 100vh;
+    position: relative;
+   }
+    
+   .slider .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    animation: slider 16s infinite;
+    background-blend-mode: multiply;
+   }
+    
+   .slider .slide:nth-child(1) {
+      background: linear-gradient(to bottom,#fff, #000), url('../imgs/furin.jpeg') no-repeat center / cover;
+      animation-delay: 0s;
+   }
+   
+   .slider .slide:nth-child(2) {
+      background: linear-gradient(to bottom, #fff, #000), url('../imgs/tyausuyama.png') no-repeat center / cover;
+      animation-delay: -4s;
+   }
+   
+   .slider .slide:nth-child(3) {
+    background: linear-gradient(to bottom, #fff, #000), url('../imgs/mikawako.jpeg') no-repeat center / cover;
+      animation-delay: -8s;
+   }
+   
+   .slider .slide:nth-child(4) {
+    background: linear-gradient(to bottom, #fff, #000), url('../imgs/kourankei-3.png') no-repeat center / cover;
+      animation-delay: -12s;
+   }
+   
+   
+   @keyframes slider {
+     0%, 20%, 100% {
+       opacity: 1;
+       animation-timing-function: ease;
+       z-index: 0;
+     }
+     25% {
+       opacity: 0;
+       animation-timing-function: step-end;
+       z-index: 0;
+     }
+     80% {
+       opacity: 1;
+       animation-timing-function: step-end;
+       z-index: -1;
+     }
+   }
