--- a/res/css/style.css
+++ b/res/css/style.css
@@ -29,6 +29,47 @@ body {
     z-index: 100;
     font-size: 30px;
 }
+
+article {
+  padding: .5rem;
+  border-radius: .5rem;
+  margin: 1rem;
+}
+
+article > div {
+  padding: .5rem;
+}
+
+.img-nature {
+  margin: .5rem 0;
+  border-radius: .5rem;
+  box-shadow: #3B3502 1px 1px;
+  width: 100%;
+  height: 30vh;
+}
+
+
+.layer-black {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.2);
+}
+
+.nature1 {
+  background: url('../imgs/kourankei-3.png') no-repeat center / cover;
+}
+
+.nature2 {
+  background: url('../imgs/mikawako.jpeg') no-repeat center / cover;
+}
+
+.nature3 {
+  background: url('../imgs/furin1.JPG') no-repeat center / cover;
+}
+
+.nature4 {
+  background: url('../imgs/tyausu.jpeg') no-repeat center / cover;
+}
 /* title animation */
 .title1 {
     padding: 10px;
